--- a/social/templates/base.html
+++ b/social/templates/base.html
@@ -5,6 +5,13 @@
         <title></title>
     </head>
     <body>
+            {% if user.is_authenticated %}
+                <li><a href="{% url 'accounts:logout' %}" class="btn btn-simple">Log out</a></li>
+            {% else %}
+                <li><a href="{% url 'accounts:login' %}" class="btn btn-simple">Log in</a></li>
+                <li><a href="{% url 'accounts:signup' %}" class="btn btn-simple">Sign up</a></li>
+            {% endif %}
+
         {% block content %}
 
         {% endblock %}
