--- a/social/posts/templates/posts/details.html
+++ b/social/posts/templates/posts/details.html
@@ -1,14 +1,38 @@
 {% extends 'posts/post_base.html' %}
 
 {% block content %}
-<h3>{{post.title}}</h3>
-<div>
-  <div>
-    {{post.body}}
-  </div>
-  <div>
-    {{post.created_at}}
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container">
+<div class="row">
+    <div class="col-md-1"></div>
+	<div class="col-md-6">
+		<div id="postlist">
+			<div class="panel">
+                <div class="panel-heading">
+                    <div class="text-center">
+                        <div class="row">
+                            <div class="col-sm-9">
+                                <h3 class="pull-left">{{post.title}}</h3>
+                            </div>
+                            <div class="col-sm-3">
+                                <h4 class="pull-right">
+                                <small><em>{{post.created_at}}</em></small>
+                                </h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+            <div class="panel-body">
+                {{post.body}}
+            </div>
+        </div>
+      </div>
+      <div class="text-center"><a href="/posts" id="loadmore" class="btn btn-primary">Older Posts...</a></div>
   </div>
 </div>
-<a href="/posts">Go Back</a>
 {% endblock %}
